@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.87 2010/01/08 11:12:53 tho Exp $
+$Id: ChangeLog,v 1.88 2010/01/11 13:07:52 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
@@ -7,7 +7,8 @@ LibU 2.0.0
 	  documentation fixes by Mickael Auger
 	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
 	  that is supplied to the callback function
-	- [uri] parse IPv6 numeric addresses as per rfc3986; added tester
+	- [uri] complete support for RFC 3986; added u_uri_unparse interface to 
+	  create conformant URI strings; added tester
 	- [net] module implementation revamped, too many changes to be listed here:
 	  see the INTERFACE_CHANGES document
 	- fix configure bug which prevented IPv6 and UNIX sockets bits inclusion;
@@ -15,6 +16,7 @@ LibU 2.0.0
 	  new --no_sctp command line option to explicitly disable SCTP bits
 	- [pwd] use u_strtok instead of deprecated u_tokenize internally
 	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed
+	- [misc] some minor fixes 
 
 LibU 1.4.1
 	- [missing] u_va_copy added
